# CivDB

./: .gitignore  CMakeLists.txt  create.cpp  db.cpp  db.h  dbUtils.cpp  dbUtils.h  discard.cpp  draw.cpp  export.cpp  factory.h  held.cpp  listCards.cpp  parser.cpp  parser.h  rearrange.cpp  setplayer.cpp  shell.Changelog  shell.cpp  value.cpp
